@@ -108,6 +108,12 @@ abstract class Maintenance {
 	private $mDb = null;
 
 	/**
+	 * Used when creating separate schema files.
+	 * @var resource
+	 */
+	public $fh;
+
+	/**
 	 * List of all the core maintenance scripts. This is added
 	 * to scripts added by extensions in $wgMaintenanceScripts
 	 * and returned by getMaintenanceScripts()
