@@ -35,7 +35,6 @@ $wgUseMasterForMaintenance = true;
 require_once( dirname( __FILE__ ) . '/Maintenance.php' );
 
 class UpdateMediaWiki extends Maintenance {
-
 	function __construct() {
 		parent::__construct();
 		$this->mDescription = "MediaWiki database updater";
@@ -43,6 +42,8 @@ class UpdateMediaWiki extends Maintenance {
 		$this->addOption( 'quick', 'Skip 5 second countdown before starting' );
 		$this->addOption( 'doshared', 'Also update shared tables' );
 		$this->addOption( 'nopurge', 'Do not purge the objectcache table after updates' );
+		$this->addOption( 'noschema', 'Only do the updates that are not done during schema updates' );
+		$this->addOption( 'schema', 'Output SQL to do the schema updates instead of doing them.  Works even when $wgAllowSchemaUpdates is false', false, true );
 		$this->addOption( 'force', 'Override when $wgAllowSchemaUpdates disables this script' );
 	}
 
@@ -78,10 +79,24 @@ class UpdateMediaWiki extends Maintenance {
 	function execute() {
 		global $wgVersion, $wgTitle, $wgLang, $wgAllowSchemaUpdates;
 
-		if( !$wgAllowSchemaUpdates && !$this->hasOption( 'force' ) ) {
+		if( !$wgAllowSchemaUpdates && !( $this->hasOption( 'force' ) || $this->hasOption( 'schema' ) || $this->hasOption( 'noschema' ) ) ) {
 			$this->error( "Do not run update.php on this wiki. If you're seeing this you should\n"
-				. "probably ask for some help in performing your schema updates.\n\n"
-				. "If you know what you are doing, you can continue with --force", true );
+				. "probably ask for some help in performing your schema updates or use\n"
+				. "the --noschema and --schema options to get an SQL file for someone\n"
+				. "else to inspect and run.\n\n"
+				. "If you know what you are doing, you can continue with --force\n", true );
+		}
+
+		$this->fh = null;
+		if( substr( $this->getOption( 'schema' ), 0, 2 ) === "--" ) {
+			$this->error( "The --schema option requires a file as an argument.\n", true );
+		} else if( $this->hasOption( 'schema' ) ) {
+			$file = $this->getOption( 'schema' );
+			$this->fh = fopen( $file, "w" );
+			if( $this->fh === false ) {
+				$err = error_get_last();
+				$this->error( "Problem opening the schema file for writing: $file\n\t{$err['message']}", true );
+			}
 		}
 
 		$wgLang = Language::factory( 'en' );
@@ -112,9 +127,21 @@ class UpdateMediaWiki extends Maintenance {
 
 		$shared = $this->hasOption( 'doshared' );
 
-		$updates = array( 'core', 'extensions', 'stats' );
-		if( !$this->hasOption('nopurge') ) {
-			$updates[] = 'purge';
+		$updates = array();
+		if( $this->hasOption('schema') ) {
+			$updates[] = 'core';
+			$updates[] = 'extensions';
+		} else {
+			if( $this->hasOption('noschema') ) {
+				$updates[] = 'noschema';
+			}
+			$updates[] = 'core';
+			$updates[] = 'extensions';
+			$updates[] = 'stats';
+
+			if( !$this->hasOption('nopurge') ) {
+				$updates[] = 'purge';
+			}
 		}
 
 		$updater = DatabaseUpdater::newForDb( $db, $shared, $this );
@@ -124,11 +151,11 @@ class UpdateMediaWiki extends Maintenance {
 			if ( $updater->updateRowExists( $maint ) ) {
 				continue;
 			}
+
 			$child = $this->runChild( $maint );
 			$child->execute();
 			$updater->insertUpdateRow( $maint );
 		}
-
 		$this->output( "\nDone.\n" );
 	}
 
@@ -139,11 +166,11 @@ class UpdateMediaWiki extends Maintenance {
 		# This needs to be disabled early since extensions will try to use the l10n
 		# cache from $wgExtensionFunctions (bug 20471)
 		$wgLocalisationCacheConf = array(
-			'class' => 'LocalisationCache',
+		'class' => 'LocalisationCache',
 			'storeClass' => 'LCStore_Null',
 			'storeDirectory' => false,
 			'manualRecache' => false,
-		);
+			);
 	}
 }
 
